# sphinxy

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  modules.html  py-modindex.html  pyproject.toml  search.html  sphinxy.html  sphinxy.riddle.html  sphinxy.sphinx.html
02-getting-started/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
03-rst-basics/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
04-document-api/: .buildinfo  genindex.html  index.html  search.html
05-generate-docs/: .buildinfo  genindex.html  index.html  modules.html  py-modindex.html  search.html  sphinxy.html  sphinxy.riddle.html  sphinxy.sphinx.html
06-select-theme/: .buildinfo  genindex.html  index.html  modules.html  py-modindex.html  search.html  sphinxy.html  sphinxy.riddle.html  sphinxy.sphinx.html
07-gh-pages/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  sphinxy.html  sphinxy.riddle.html  sphinxy.sphinx.html
08-automate-updates/: .buildinfo  genindex.html  index.html  modules.html  py-modindex.html  search.html  searchindex.js  sphinxy.html  sphinxy.riddle.html  sphinxy.sphinx.html
09-versioning/: .buildinfo  genindex.html  index.html  modules.html  py-modindex.html  search.html  sphinxy.html  sphinxy.riddle.html  sphinxy.sphinx.html
10-automate-versioning/: .buildinfo  genindex.html  index.html  modules.html  py-modindex.html  search.html  searchindex.js  sphinxy.html  sphinxy.riddle.html  sphinxy.sphinx.html
docs/: Makefile  conf.py  index.rst  (+1 more)
(+82 files in other folders)
